<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">公社</string>

    <!-- LoginActivity -->
    <string name="input_phone_num">电话号码</string>
    <string name="input_user_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="sing_up">注册</string>

    <!-- MainActivity -->
    <string name="btn_message">消息</string>
    <string name="btn_friends">好友</string>
    <string name="btn_activities">动态</string>
    <string name="btn_settings">设置</string>
    <string name="txt_home_page">我的主页</string>

    <!-- FriendFragment -->
    <string name="txt_delete">删除</string>

    <!-- SettingFragment -->
    <string name="txt_change_password">修改密码</string>
    <string name="txt_about">关于西山</string>
    <string name="txt_log_out">退出登录</string>

    <!-- sliding menu -->
    <string name="menu_all_involved_me">我的讨论</string>
    <string name="menu_all_mention_me">所有@我的</string>
    <string name="txt_my_group">我创建的群组</string>
    <string name="txt_belong_group">我加入的群组</string>
    <string name="txt_group_manage">群组管理</string>
    <string name="txt_empty_my_group">您还没有创建群组</string>
    <string name="txt_empty_belong_group">您还没有加入群组</string>

    <!-- HeaderFragment -->
    <string name="btn_back">返回</string>

    <!-- Register UI -->
    <string name="txt_phone_num">手机号码 :</string>
    <string name="txt_password_pre">密</string>
    <string name="txt_password_post">码 :</string>
    <string name="txt_name_pre">姓</string>
    <string name="txt_name_post">名 :</string>
    <string name="txt_hint_phone_num">请输入手机号码</string>
    <string name="txt_hint_password">请输入密码</string>
    <string name="txt_hint_name">请输入姓名</string>
    <string name="title_error_input">输入错误!</string>
    <string name="txt_set_avatar">请设置头像</string>
    <string name="txt_error_input">请确认电话号码，姓名和密码输入正确。</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_loading">网络连接中。。。</string>
    <string name="txt_network_error">网络错误，请重试。</string>
    <string name="txt_info_error">请确认电话号码和密码正确。</string>

    <!-- GroupManageActivity -->
    <string name="txt_select_group">选择群组</string>
    <string name="txt_manage_group">群组管理</string>
    <string name="btn_create_group">创建群组</string>

    <!-- Create Group Activity -->
    <string name="error_group_name">请输入正确的群组名称</string>
    <string name="btn_create">创建</string>
    <string name="btn_invite_friend">邀请好友加入</string>
    <string name="txt_create_new_group">创建新群组</string>

    <!-- EditPostActivity -->
    <string name="txt_title">标题</string>
    <string name="hint_input_title">点击输入标题</string>
    <string name="hint_input_content">点击输入内容</string>
    <string name="btn_at_my_friend">\@我的好友</string>
    <string name="txt_post">发帖</string>
    <string name="btn_post">发布</string>
    <string name="error_input_no_complete">请输入标题和内容。</string>
    <string name="error_network">网络错误，请稍后重试。</string>

    <!-- BrowserPostActivity -->
    <string name="btn_reply">回复</string>
    <string name="error_input_content">请输入内容。</string>

    <!-- GroupInfoActivity -->
    <string name="btn_dismiss">解散群组</string>
    <string name="txt_group_info">群组资料</string>
    <string name="txt_introduction">简介</string>
    <string name="txt_member">成员</string>
    <string name="txt_human_being">人</string>

    <!-- GroupMemberActivity -->
    <string name="txt_group_member">群组成员</string>


    <string name="dummy_blind"> </string>
</resources>