<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <fragment xmlns:gongshe="http://schemas.android.com/apk/res/com.gongshe"
              android:name="com.gongshe.controller.HeaderFragment"
              android:id="@+id/common_header"
              gongshe:left_btn="visible"
              gongshe:text_title="@string/txt_create_new_group"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/etx_group_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:ellipsize="end"/>

    <EditText
            android:id="@+id/etx_group_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_invite_friend"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_invite_friend"
            android:gravity="center"/>

    <View
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>

    <Button
            android:id="@+id/btn_create_group"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_create"
            android:gravity="center"/>

</LinearLayout>