<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <fragment xmlns:gongshe="http://schemas.android.com/apk/res/com.gongshe"
              android:name="com.gongshe.controller.HeaderFragment"
              android:id="@+id/common_header"
              gongshe:left_btn="visible"
              gongshe:img_left_btn="@drawable/icon_back"
              gongshe:right_btn_one="visible"
              gongshe:img_right_one="@drawable/icon_edit"
              gongshe:text_title="@string/txt_post"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="44dp"
                  android:minHeight="44dp"
                  android:background="@color/white"
                  android:orientation="horizontal">

        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:textSize="20sp"
                  android:textColor="@color/text_title"
                  android:layout_gravity="left|center_vertical"
                  android:layout_marginLeft="20dp"
                  android:text="@string/txt_title"/>

        <EditText android:id="@+id/etx_input_title"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:layout_gravity="left|center_vertical"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="20dp"
                  android:background="#00000000"
                  android:hint="@string/hint_input_title"
                  android:textSize="16sp"
                  android:textColor="@color/txt_content"
                  android:singleLine="true"
                  android:ellipsize="end"
                  android:inputType="text"/>
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/group_divider"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="76dp"
                  android:minHeight="76dp"
                  android:background="@color/white"
                  android:orientation="horizontal">
        
        <ImageView android:id="@+id/imv_add_image"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:scaleType="fitXY"
                   android:src="@drawable/icon_add_member"
                   android:layout_gravity="left|center_vertical"
                   android:layout_marginLeft="20dp"
                   android:contentDescription="@string/dummy_blind"/>
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/group_divider"/>

    <EditText android:id="@+id/etx_input_content"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:gravity="left|top"
              android:padding="20dp"
              android:textColor="@color/txt_content"
              android:textSize="16sp"
              android:inputType="textMultiLine"
              android:background="@color/white"
              android:hint="@string/hint_input_content"/>



    <LinearLayout android:id="@+id/member_list"
                  android:layout_width="match_parent"
                  android:layout_height="61dp"
                  android:background="@drawable/bg_edit_post_bot"
                  android:orientation="horizontal">

        <TextView android:id="@+id/txv_at_friend"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:textSize="16sp"
                  android:layout_gravity="left|center_vertical"
                  android:textColor="@color/text_title"
                  android:text="@string/btn_at_my_friend"/>

        <it.sephiroth.android.library.widget.HListView
                android:id="@+id/lsv_at_friend"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                xmlns:hlsv="http://schemas.android.com/apk/res/com.gongshe"
                hlsv:dividerWidth="0dp"
                android:listSelector="#00000000"
                android:cacheColorHint="#00000000"/>
    </LinearLayout>


</LinearLayout>