<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:id="@+id/content_title_bar"
                      android:layout_width="match_parent"
                      android:layout_height="40dp"
                      android:orientation="horizontal"
                      android:background="@color/grey"
                      android:layout_alignParentTop="true">

            <ImageView android:id="@+id/icon_title_bar"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_weight="0"
                       android:layout_gravity="center_vertical"
                       android:src="@drawable/icon"/>

            <TextView android:id="@+id/txview_title_bar"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:gravity="center"
                      android:text="title"/>

            <ImageView android:id="@+id/icon_title_bar_right"
                       android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_weight="0"
                       android:layout_gravity="center_vertical"
                       android:visibility="invisible"
                       android:src="@drawable/icon"/>
        </LinearLayout>

        <FrameLayout android:id="@+id/content_frame"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/content_title_bar"/>

        <LinearLayout android:id="@+id/content_bottom_bar"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/grey"
                      android:layout_alignParentBottom="true">

            <Button android:id="@+id/btn_activities"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/btn_activities"/>

            <Button android:id="@+id/btn_message"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/btn_message"/>

            <Button android:id="@+id/btn_post"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/btn_post"/>

            <Button android:id="@+id/btn_friends"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/btn_friends"/>
        </LinearLayout>
</RelativeLayout>